--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Luna Liu
-#logo: /assets/img/headshot_circle.png
+logo: /assets:img/photo.jpg
 #description: text below image
 show_downloads: true
 theme: jekyll-theme-minimal
