--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Luna Liu
-logo: /assets:img/photo.jpg
+logo: /assets:img/photo.png
 #description: text below image
 show_downloads: true
 theme: jekyll-theme-minimal
